--- a/exercises/range/src/sass/_variables.scss
+++ b/exercises/range/src/sass/_variables.scss
@@ -2,9 +2,11 @@ $hopbush: #c69 !default;
 $patina: #699 !default;
 $venus: #998099 !default;
 $nebula: #d2e1dd !default;
+$lochmara:  #3071a9 !default;
+$curious-blue: #367ebd !default;
 
 $black: #000 !default;
 $white: #fff !default;
 
 $btn-disabled-opacity: 0.5 !default;
-
+$box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
