--- a/exercises/nesting/src/sass/app.scss
+++ b/exercises/nesting/src/sass/app.scss
@@ -3,3 +3,23 @@ body {
     color: #c46;
   }
 }
+
+.btn {
+  padding: 2px 10px 2px 10px;
+  border: 1px solid #c46;
+  border-radius: 2px;
+
+  &.btn-primary {
+    background-color: #c46;
+    color: white;
+  }
+
+  &.btn-secondary {
+    background-color: rgb(237, 188, 200);
+    color: black;
+  }
+
+  &:disabled {
+    opacity: 0.5;;
+  }
+}
