--- a/exercises/parent/src/sass/app.scss
+++ b/exercises/parent/src/sass/app.scss
@@ -17,4 +17,18 @@
     width: 200px;
     float: left;
   }
+
+  &.right-nav {
+    .sidebar {
+      float: right;
+    }
+
+    .main {
+      margin-left: 0px;
+      margin-right: 220px;
+      border-left: none;
+      border-right: 2px solid #333;
+    }
+  }
+
 }
